--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     ]
   },
   "devDependencies": {
+    "install": "^0.13.0",
+    "npm": "^6.11.3",
+    "react-accessible-accordion": "^3.0.0",
     "styled-components": "^4.3.2"
   }
 }
