--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
   },
   "devDependencies": {
     "install": "^0.13.0",
+    "leaflet": "^1.5.1",
     "npm": "^6.11.3",
     "react-accessible-accordion": "^3.0.0",
+    "react-leaflet": "^2.4.0",
     "styled-components": "^4.3.2"
   }
 }
