--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "lcnpubd",
   "version": "0.1.0",
+  "homepage": "https://kozakdenys.github.io",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-responsive-carousel": "^3.1.50",
@@ -13,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
